--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
     <body class="container grid-lg" id="app">
         <header class="navbar">
             <section class="navbar-section">
-                <a href="https://github.com/yieldray/genshin-tool#readme" class="btn btn-link">Docs</a>
-                <a href="https://github.com/yieldray/genshin-tool" class="btn btn-link">GitHub</a>
+                <a href="https://shaoyu520.xyz" class="btn btn-link">Home</a>
+                <!--原作者-->
+                <一个 Href=“https://github.com/yieldray/genshin-tool” 班级=“BTN BTN-LINK”>GitHub</一个>
             </section>
             <section class="navbar-center">
                 <a href="./"><i class="icon icon-search"></i></a>
