--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <section class="navbar-section">
                 <a href="https://shaoyu520.xyz" class="btn btn-link">Home</a>
                 <!--原作者-->
-                <一个 Href=“https://github.com/yieldray/genshin-tool” 班级=“BTN BTN-LINK”>GitHub</一个>
+                <a href="https://github.com/yieldray/genshin-tool" class="btn btn-link">GitHub</a>
             </section>
             <section class="navbar-center">
                 <a href="./"><i class="icon icon-search"></i></a>
